<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotasActivity">


    <Button
        android:id="@+id/btnAgregaNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Agregar Nota" />

    <Button
        android:id="@+id/btnNotas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAgregaNota"
        android:layout_marginTop="0dp"
        android:text=" Notas" />


    <Button
        android:id="@+id/dialogBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnNotas"
        android:layout_marginTop="0dp"
        android:text=" +" />

    <Button
        android:id="@+id/tareasBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnNotas"
        android:layout_marginTop="0dp"
        android:text="Notas" />


</RelativeLayout>